@@ -1,3 +1,8 @@
+2007-06-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 04278] Re: segfault on CentOS4.5/libgc6.8
+	* term.c: add handling xterm-incompatible terminals without gpm.
+
 2007-06-04  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 04271] vi_prec_num
@@ -8922,4 +8927,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.999 2007/06/04 13:21:10 inu Exp $
+$Id: ChangeLog,v 1.1000 2007/06/07 10:54:10 inu Exp $
